--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </tr>
         </tbody>
     </table>
-    <img src="imgs/bingo.jpg" width="200" alt="แมวส้มขาสั้น" height="200">
+    <img src="imgs/3.jpg" width="200" alt="แมวส้มขาสั้น" height="200">
     <img src="imgs/bingo.jpg" class="rounded" alt="แมวส้มขาสั้น" width="200" height="200">
     <img src="imgs/bingo.jpg" class="rounded-circle" alt="แมวส้มขาสั้น" width="200" height="200">
     <img src="imgs/bingo.jpg" class="img-thumbnail" alt="แมวส้มขาสั้น" width="200" height="200">
